sletta de bruke annet

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="styles.css">
-   <title> Moving partsss!!</title>
+   <title> Moving parts</title>
   </head>
   <body>
 <header>
@@ -11,14 +11,13 @@
 <nav>
   <ul>
     <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">Yotube</a></li>
-    <li><a href="https://www.facebook.com//?fref=ts"target="_balnk">Facbook</a></li>
+    <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">Facbook</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
   </ul>
+  <h1>Zelda</h1>
 </nav>
 <main>
-  <ceneter><h1 style=font-size:500%> Zelda</h1>
-    <iframe width="560" height="315" src"https://www.youtube.com/watch?v=wrqGPaxs7g8" frameborder"20" allowfullscreen></ifarme></center>
     </main>
     <footer>
       Copyright 2016
