--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
     <li><a href="about.html">About</a></li>
   </ul>
   <h1>Zelda</h1>
-  <img src="pic_zelda123.jpg" alt="Zelda View" style="width:304px;height:228px;">
+  <img src="Zelda.jpg" alt="Zelda View" style="width:304px;height:228px;">
 </nav>
 <main>
     </main>
