--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
   </head>
   <body>
 <header>
+  <img src="Head.jpg" alt="Zelda View" style="width:100%;height:500px;">
 </header>
 <nav>
   <ul>
@@ -18,13 +19,12 @@
   <h1>Zelda</h1>
   <img src="Zelda.jpg" alt="Zelda View" style="width:304px;height:228px;">
 </ul>
-<h1>Zelda</h1>
-    <img src="Zelda.jpg" alt="Zelda View" style="width:304px;height:228px;">
+<h1>Zelda Nintendo</h1>
 </nav>
 <main>
     </main>
     <footer>
-      Copyright 2016
+      Copyright 420
       <footer>
   </body>
 </html>
