--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="styles.css">
-   <title> Moving parts</title>
+   <title>Hallois</title>
   </head>
   <body>
 <header>
