--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,9 @@
 </header>
 <nav>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">utub</a></li>
-    <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">fjesboka</a></li>
+    <li><a href="index.htm">Hjem</a></li>
+    <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">youtube</a></li>
+    <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">facebook</a></li>
     <li><a href="contact.html">Om Zelda</a></li>
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Zelda</a></li>
   </ul>
