--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
       <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
     </ul>
     <h1>Zelda</h1>
+    <img src="zelda123.jpg" alt="Zelda123 View" style="with500px;height:250px">
     <p>Zelda er en serie videospill fra Nintendo (ofte forkortet Zelda). Gjennomgangsfigurene i serien er helten Link, Prinsesse Zelda og Ganondorf.
 Det første spillet i serien kom ut i februar 1986. I Japan er spillet kjent som ゼルダの伝説 (Zeruda no Densetsu), og forkortet til ゼル伝 (Zeru-Den). Spillenes handling foregår som oftest i en fantasiverden kalt Hyrule. Gameplayet inneholder en blanding av action, eventyr, rollespill og gåteløsing. Spillserien er kjent for dets skjønnhet og storslåtthet, kreativt gameplay, flott originalmusikk (temamusikk). Spillene i serien er også noen av de mest solgte videospillene i verden noensinne.
 I september 2005 passerte Nintendo nok en milepæl med 47 millioner solgte Zelda-spill.</p>
