--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
    <title>Hallois</title>
   </head>
   <body>
+    <link rel="Zelda.html" href="/css/master.css">
 <header>
   <img src="Head.jpg" alt="Zelda View" style="width:100%;height:500px;">
 </header>
@@ -13,7 +14,7 @@
   <ul>
     <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">utub</a></li>
     <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">fjesboka</a></li>
-    <li><a href="contact.html">Om Zelda</a></li>
+    <li><a href="Zelda.htm">Zelda</a></li>
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Zelda</a></li>
   </ul>
   <h1>Zelda</h1>
