--- a/canvas.htm
+++ b/canvas.htm
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+  <style type="text/css">
+  canvas{border:#666 1px solid; }
+  </style>
+  <script type="application/javascript" language="javascript">
+  </script>
+</head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>:)</title>
@@ -16,6 +22,7 @@
     <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">facebook</a></li>
     <li><a href="contact.html">Om Zelda</a></li>
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
+    <li><a href="canvas.htm">:)</a></li>
   </nav>
   </body>
 </html>
