--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <title>Om zelda</title>
   </head>
   <body>
-  <header>
+<header>
   <img src="Head.jpg" alt="Zelda View" style="width:100%;height:500px;">
-  </header>
+</header>
   <nav>
     <ul>
       <li><a href="index.htm">Hjem</a></li>
@@ -16,6 +16,7 @@
       <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">facebook</a></li>
       <li><a href="contact.html">Om Zelda</a></li>
       <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
+      <li><a href="canvas.htm">:)</a></li>
     </ul>
     <h1>Zelda</h1>
     <img src="zelda123.jpg" alt="Zelda123 View" style="with500px;height:250px">
