--- a/canvas.htm
+++ b/canvas.htm
@@ -2,18 +2,21 @@
 <html>
 <head>
   <style type="text/css">
-  canvas{border:#666 1px solid; }
+  canvas{border:#666 9px solid; }
   </style>
   <script type="application/javascript" language="javascript">
   function draw(x,y) {
-    var canvas = document.getElementById('canvas');
+    var canvas = document.getElementById('brett');
     var ctx =canvas.getContext('2d');
     ctx.save();
     ctx.clearRect(0,0,550,400);
     ctx.fillStyle ="rgba (0,200,0,1)"
-    ctx.fillRect (x, 20, 50, 50);
-    x += 1;
-    var loopTimer = setTimeout('draw('+x+','+y+')',10);
+    ctx.fillRect (x, y, 50, 50);
+    ctx.fillRect (x, y + 100, 5, 10);
+
+    x =  x + 1;
+    y = y + 1;
+    var loopTimer = setTimeout('draw('+x+','+y+')',10,10);
   }
   </script>
 </head>
@@ -34,7 +37,7 @@
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
     <li><a href="canvas.htm">:)</a></li>
   </nav>
-    <button onclick="draw(1,0)"<Draw></button>
-    <canvas id="canvas" width="550" height="400"></canvas>
+    <button onclick="draw(1,0)">Click</button>
+    <canvas id="brett" width="550" height="400" style="" ></canvas>
   </body>
 </html>
