--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">youtube</a></li>
       <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">facebook</a></li>
       <li><a href="contact.html">Om Zelda</a></li>
-      <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
+      <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilde</a></li>
       <li><a href="canvas.htm">:)</a></li>
     </ul>
     <h1>Zelda</h1>
