--- a/canvas.htm
+++ b/canvas.htm
@@ -45,11 +45,12 @@
     <nav>
    <ul>
     <li><a href="index.htm">Hjem</a></li>
-    <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">YSoutube</a></li>
+    <li><a href="https://www.youtube.com/watch?v=wrqGPaxs7g8"target="_blank">Youtube</a></li>
     <li><a href="https://www.facebook.com/LegendofZelda/?fref=ts"target="_balnk">Facebook</a></li>
     <li><a href="contact.html">Om Zelda</a></li>
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilder</a></li>
     <li><a href="canvas.htm">:)</a></li>
+    <li><a href="canvas2.htm">hei</a></li>
   </nav>
     <button onclick="draw(1,0)">Click</button>
     <canvas id="brett" width="720" height="700" style="" ></canvas>
