--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       <li><a href="contact.html">Om Zelda</a></li>
       <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilde</a></li>
       <li><a href="canvas.htm">:)</a></li>
+      <li><a href="canvas2.htm">hei</a></li>
     </ul>
     <h1>Zelda</h1>
     <img src="zelda123.jpg" alt="Zelda123 View" style="with500px;height:250px">
