--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
     <li><a href="contact.html">Om Zelda</a></li>
     <li><a href="https://www.google.no/search?q=Zelda&espv=2&biw=1920&bih=925&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi2qIrL2c3QAhUjJ5oKHRKLCpgQ_AUIBigB#imgrc=TnUhSTNTbR8wcM%3A">Bilde</a></li>
     <li><a href="canvas.htm">:)</a></li>
+    <li><a href="canvas2.htm">hei</a></li>
   </ul>
   <h1>Zelda</h1>
   <img src="Zelda.jpg" alt="Zelda View" style="width:500px;height:250px;">
