--- a/canvas2.htm
+++ b/canvas2.htm
@@ -25,7 +25,10 @@
   <li><a href="canvas.htm">:)</a></li>
   <li><a href="canvas2.htm">hei</a></li>
 </nav>
-<button onclick="draw(1,0)">Click/button>
-  <canvas id="brett" width="720" height="700" styleww"" ></canvas>
+<button onclick="draw(1,0)">
+prøv me  
+</button>
+  <canvas id="brett" width="720" height="700">
+</canvas>
 </body>
 </html>
